--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.20.7",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "framer-motion": "^12.26.2",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-graphhopper": "^1.3.0",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
