--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-google-maps/api": "^2.20.7",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
-    "framer-motion": "^12.26.2",
+    "framer-motion": "^12.29.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-graphhopper": "^1.3.0",
+    "lucide-react": "^0.563.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-intersection-observer": "^10.0.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
+    "recharts": "^3.7.0",
     "redux": "^5.0.1",
     "swiper": "^12.0.2"
   },
